Still confused on webpack

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <div class = "MainPage"> 
+        <header class = "MenuNavHeader">
+            <nav class = "NavMenu"> 
+                <button id = "HomeButton">Home</button>
+                <button id = "MenuButton">Menu</button>
+                <button id = "AboutButton">About</button>
+            </nav>
+        </header>
+
+        <section class = "ContentSection"> 
+
+        </section>
+    </div>
     
 </body>
 </html>
