Added a working page function + styles

--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
             <nav class = "NavMenu"> 
                 <button id = "HomeButton">Home</button>
                 <button id = "MenuButton">Menu</button>
-                <button id = "AboutButton">About</button>
+                <button id = "ContactButton">Contact</button>
             </nav>
         </header>
 
