Added a footer + Menu page

--- a/src/template.html
+++ b/src/template.html
@@ -18,6 +18,10 @@
         <section class = "ContentSection"> 
     
         </section>
+
+        <footer class = "FooterDiv"> 
+            <h3 id = "CopyRightTag">@Copyright</h3>
+        </footer>
     </div>
     
 </body>
